:bug: Fix controls overlay z-index

--- a/src/css/night-react/components/_controls.sass
+++ b/src/css/night-react/components/_controls.sass
@@ -32,6 +32,7 @@
 
     +element(overlay)
       position: absolute
+      z-index: 3
       bottom: 100%
       left: 0
       width: 100%
